--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -31,6 +31,7 @@
                         <li><a class="nav-link js-scroll-trigger" href="/accounts/logout/">Menu 1</a></li>
                         <li><a class="nav-link js-scroll-trigger" href="/accounts/login/">Menu 2</a></li>
                         <li><a class="nav-link js-scroll-trigger" href="{% url 'link_list' %}">Links</a></li>
+                        <li><a class="nav-link js-scroll-trigger"href="/bibliography/">Bibliography</a></li>
                     </ul>
             </li>
           </ul>
