--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -34,9 +34,15 @@
 
     <script type='text/html' id='side-panel-template'>
         <div class="right-panel">
-            <div class="right-panel-title">
-                <i class="fa fa-map-marker"></i> <span class="site-name"> Site #number </span>
-                <i class="fa fa-times close-panel"></i>
+            <div class="right-panel-header">
+                <div class="row">
+                    <div class="col-lg-10 right-panel-title">
+                    </div>
+                    <div class="col-lg-2">
+                        <i class="fa fa-times close-panel"></i>
+                    </div>
+                </div>
+
             </div>
             <div class="row side-panel">
                 <div class="col-lg-12" id="content-panel"></div>
