--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -45,7 +45,8 @@
 
             </div>
             <div class="row side-panel">
-                <div class="col-lg-12" id="content-panel"></div>
+                <div class="col-lg-12" id="content-panel">
+                </div>
             </div>
             <div class="row side-panel panel-loading">
                 <img src="{% static "img/small-loading.svg" %}" alt="Loading view">
