--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -23,6 +23,7 @@
 
 {% block body_content %}
     <div id="map-container"></div>
+    <div id="loading-warning"><span>LOADING....</span></div>
 
     <script type='text/html' id='map-template'>
         <div id="map" class="map"></div>
