update landing page and add filters

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -141,7 +141,7 @@ html, body, .map, .map-wrapper, #map-container {
     color: white;
     width: 54px;
     height: 33px;
-    z-index: 2001;
+    z-index: 11;
     text-align: center;
     box-shadow: none;
 }
@@ -229,7 +229,7 @@ html, body, .map, .map-wrapper, #map-container {
     color: black;
     padding: 5px 15px;
     border: none;
-    z-index: 2000;
+    z-index: 10;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
     text-align: center;
     font-weight: normal;
@@ -258,6 +258,8 @@ html, body, .map, .map-wrapper, #map-container {
 
 .filter-content {
     text-align: left;
+    max-height: 300px;
+    overflow-y: scroll;
 }
 
 .map-search-close, .close-panel {
@@ -541,3 +543,10 @@ div:hover::-webkit-scrollbar {
     padding-right: 20px;
 }
 
+.result-search:hover {
+   background-color: rgba(255, 255, 255, 0.6);
+}
+
+.sub-filter {
+    cursor: pointer;
+}
