--- a/bims/templates/landing_page.html
+++ b/bims/templates/landing_page.html
@@ -9,6 +9,7 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static "css/landing_page.css" %}" rel="stylesheet">
+    <link href="{% static "css/navbar.css" %}" rel="stylesheet">
 
 {% endblock %}
 
