--- a/bims/templates/td_biblio/layouts/three_cols.html
+++ b/bims/templates/td_biblio/layouts/three_cols.html
@@ -2,7 +2,7 @@
 
 {% load static from staticfiles %}
 
-{% block content %}
+{% block body_content %}
 
 <div id="content-wrapper">
     <div id="left-sidebar" class="{% block left_sidebar_class %}{% endblock left_sidebar_class %}">
@@ -19,7 +19,7 @@
         {% block right_sidebar %}{% endblock right_sidebar %}
     </div>
 </div>
-{% endblock content %}
+{% endblock body_content %}
 
 {% block javascripts %}
 <script src="{% static 'td_biblio/javascripts/td_biblio.js' %}"></script>
