--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -524,13 +524,19 @@ div:hover::-webkit-scrollbar {
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
-#loading-warning {
+#loading-warning, #fetching-error {
     position: absolute;
     padding: 10px;
     top: 10px;
     width: 100%;
     text-align: center;
     opacity: 0.3;
+    display: none;
+    z-index: 9999;
+}
+
+#fetching-error {
+    opacity: 0.8;
 }
 
 #loading-warning span {
@@ -551,4 +557,17 @@ div:hover::-webkit-scrollbar {
     font-size: .7rem;
     color: #000;
     background: rgba(255, 255, 255, .8);
+}
+
+#fetching-error .try-again-button {
+    color: blue;
+    cursor: pointer;
+}
+
+#fetching-error span {
+    background-color: red;
+    color: white;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
