--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -24,6 +24,11 @@
 {% block body_content %}
     <div id="map-container"></div>
     <div id="loading-warning"><span>LOADING....</span></div>
+    <div id="fetching-error">
+        <span class="try-again">Error when fetching data, please try again. <a class="try-again-button">refresh</a>.
+        <a class="call-administrator">If this error still insists, please call administrator.</a>
+        </span>
+    </div>
 
     <script type='text/html' id='map-template'>
         <div id="map" class="map"></div>
