--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -24,6 +24,10 @@
 {% block body_content %}
     <div id="map-container"></div>
     <div id="loading-warning"><span>LOADING....</span></div>
+    <div class="ol-control mouse-position">
+        <button type="button"><i class="fa fa-globe"></i></button>
+        <div id="mouse-position-wrapper" style="display: none"></div>
+    </div>
 
     <script type='text/html' id='map-template'>
         <div id="map" class="map"></div>
