--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -48,7 +48,7 @@
             <div class="search-result-info">
                 Select an item to find more detailed information.
             </div>
-            <div class="row side-panel">
+            <div class="row side-panel side-panel-info">
                 <div class="col-lg-12" id="content-panel">
                 </div>
             </div>
