--- a/bims/templates/landing_page.html
+++ b/bims/templates/landing_page.html
@@ -94,5 +94,5 @@
     <script src="{% static "js/views/generate-donut-chart.js" %}"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="{% static "js/creative.js" %}"></script>
+    <script src="{% static "js/creative.js" %}"></script>1
 {% endblock %}
