--- a/bims/templates/map.html
+++ b/bims/templates/map.html
@@ -101,17 +101,18 @@
             </div>
             <div class="row sub-filter">
                 <div class="col-lg-12 map-filter-subtitle">
-                    DATE <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow" style="display: none"></i>
+                    DATE <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
             </div>
             <div class="row" style="display: none">
-                <div class="slide-container">
-                    <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+                <div class="slide-container" style="padding-bottom: 10px">
+                    <div>FROM : <input type="text" class="date-filter" id="date-filter-from"></div>
+                    <div>TO : <input class="date-filter" type="text" id="date-filter-to"></div>
                 </div>
             </div>
             <div class="row sub-filter">
                 <div class="col-lg-12 map-filter-subtitle">
-                    COLLECTOR <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow" style="display: none"></i>
+                    COLLECTOR <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
             </div>
             <div class="row" style="display: none">
@@ -120,7 +121,7 @@
             </div>
             <div class="row sub-filter">
                 <div class="col-lg-12 map-filter-subtitle">
-                    CATEGORY <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow" style="display: none"></i>
+                    CATEGORY <i class="fa fa-angle-up pull-right filter-icon-arrow"></i><i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
             </div>
             <div class="row" style="display: none">
