add user profile page

--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -61,7 +61,7 @@
                         <div class="bims-title-acc col-lg-6">BIODIVERSITY <br/>INFORMATION SYSTEM</div>
                     </div>
                      {% if user.is_authenticated %}
-                        <li><a class="nav-link js-scroll-trigger" href="#">PROFILE</a></li>
+                        <li><a class="nav-link js-scroll-trigger" href="/profile/">PROFILE</a></li>
                          <li><a class="nav-link js-scroll-trigger" href="#">CONTRIBUTIONS</a></li>
                          <li><a class="nav-link js-scroll-trigger" href="#">UPLOAD FILES</a></li>
                         <li><a class="nav-link js-scroll-trigger" href="/accounts/logout/"><i class="fa fa-sign-out"></i> LOGOUT</a></li>
